--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "portfolio_website_django"}]
 python = "~3.10"
 Django = "^4.1.4"
 django-htmx = "^1.13.0"
+gunicorn = "^20.1.0"
 
 
 [build-system]
