--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,22 @@
-name: Build & Push to Heroku Docker Registry
+name: Django CI
 on:
   push:
     branches: [ main ]
+
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     steps:
-      # checkout source
-      - name: Git Checkout
-        uses: actions/checkout@v1
-      # config JDK
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      # Build the Jar
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-      # Login in Heroku
-      - name: Heroku Container Registry login
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: heroku container:login
-      # Build and push Docker image
-      - name: Build and push
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web
-      # Release
-      - name: Release
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web
+    - uses: actions/checkout@master
+      with:
+        fetch-depth: 0
+    - name: login
+      uses: actions/heroku@master
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      with:
+        args: container:login
+    - name: set remote
+      run: git remote set-url origin https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
+    - name: push and deploy
+      run: git push origin HEAD:master -f
