--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ packages = [{include = "portfolio_website_django"}]
 python = "~3.10"
 Django = "^4.1.4"
 django-htmx = "^1.13.0"
-gunicorn = "^20.1.0"
+psycopg2-binary = "^2.9.5"
+django-environ = "^0.9.0"
+google-cloud-secret-manager = "^2.13.0"
 
 
 [build-system]
