--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django-htmx = "^1.13.0"
 psycopg2-binary = "^2.9.5"
 django-environ = "^0.9.0"
 google-cloud-secret-manager = "^2.13.0"
+django-storages = {extras = ["google"], version = "^1.13.2"}
 
 
 [build-system]
